CAY-2604 Specialization of property API for PK
CAY-2610 Align methods in ObjectSelect and SQLSelect
CAY-2611 Exclude system catalogs and schemas when run dbImport without config
CAY-2612 Modeler: add lazy-loading to dbImport tab
CAY-2645 Modeler: DbImport tree highlight improvement
CAY-2650 Support using generated primary keys along with batch inserts

Bug Fixes:

CAY-2019 Optimistic locking always fails on CRYPTO columns
CAY-2332 Property API: unable to use eq() and in() methods for toMany relationships
CAY-2417 Modeler: wrong title in attribute context menu
CAY-2506 Java class generated for Embeddable object is not serializable
CAY-2509 Result of resolving lazily faulted relationships can be out-of-date
CAY-2530 Modeler: DB Import and Class Generation from Project is performed for removed datamaps
CAY-2531 Modeler: Importing same schema after Import Revert clears all entities in datamap
CAY-2533 Modeler: Exception on validating ObjRelationship without db path
CAY-2535 Modeler: Impossible to import stored procedure apart from db tables
CAY-2537 Modeler: Schema Generation Complete popup window is hidden
CAY-2538 Modeler: dbImport configuration unclear behavior
CAY-2541 Performing query with expression with ObjectId throws NPE in some cases
CAY-2544 Possible name clash of ivar and property name in generated class
CAY-2547 CayenneDataObject serialization issue
CAY-2553 Wrong disjoint prefetch query qualifier
CAY-2559 Modeler: Warning dialog shows wrong information after changing target entity in dbRelationship
CAY-2561 Modeler: cgen type combobox doesn't set templates
CAY-2572 Queries are not sorted by name in data map XML
CAY-2573 DI field injection is triggered when creating sql Driver
CAY-2575 Select translator: Wrong translation of IN Expression
CAY-2576 Ant cgen task is broken
CAY-2577 Between property with extended type failure
CAY-2578 Wrong bindings in select of related entity by compound FK
CAY-2580 Cgen: Can't use custom templates for client mode