@@ -56,6 +56,7 @@ CAY-2611 Exclude system catalogs and schemas when run dbImport without config
 CAY-2612 Modeler: add lazy-loading to dbImport tab
 CAY-2645 Modeler: DbImport tree highlight improvement
 CAY-2650 Support using generated primary keys along with batch inserts
+CAY-2651 Support multiple IDs in the SelectById query
 
 Bug Fixes:
 
